@@ -1,8 +1,9 @@
 2008-07-xx:
     * version 0.6.1
-    * Clean quotes of tags that aren't parsed by GameFAQs
+    * Remove tags that aren't parsed by GameFAQs from quotes
     * Insert quotes at the position of the cursor in QuickPost
     * Use neutral colors for GFCode quotes
+    * Limit number of recursive GFCode quotes (currently max 3 levels)
 
 2008-07-29:
     * version 0.6.0
